# ChangeLog for dev-python/cssselect
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/cssselect/ChangeLog,v 1.2 2012/05/16 16:36:42 jer Exp $

  16 May 2012; Jeroen Roovers <jer@gentoo.org> cssselect-0.6.1.ebuild:
  Stable for HPPA (bug #416099).

*cssselect-0.6.1 (15 May 2012)

  15 May 2012; Kacper Kowalik <xarthisius@gentoo.org> +cssselect-0.6.1.ebuild,
  +metadata.xml:
  Initial import, ebuild written by me. It's new dependency for >=dev-
  python/pyquery-1.2
